--- a/app/Resources/views/menu.html.twig
+++ b/app/Resources/views/menu.html.twig
@@ -30,6 +30,11 @@
                         <div class="widget-content">
                             <span class="title" style="font-size: 15px;margin-top: 12px;"><a href="{{path ('fos_user_security_login')}}">Connexion</a></span>
                         </div>
+                        </br>
+                        <i class="sl sl-icon-check" style="font-size: 20px; margin-top: 15px; padding-left: 20px;"></i>
+                        <div class="widget-content">
+                            <span class="title" style="font-size: 15px;margin-top: 12px;"><a href="{{path ('fos_user_registration_register')}}">Inscription</a></span>
+                        </div>
                     </li>
                     {% endif %}
                     <li class="with-btn"><a href="{{path ('monbon_hlm_home_ajouter_annonce')}}" class="button border medium">Déposer votre annonce</a></li>
