--- a/src/MonbonHLM/UserBundle/Resources/views/Security/login.html.twig
+++ b/src/MonbonHLM/UserBundle/Resources/views/Security/login.html.twig
@@ -69,7 +69,11 @@
     <div class="account-footer">
         <p>
             Vous n'avez pas de compte? &nbsp;
-            <a href="{{ path("fos_user_registration_register") }}" class="">Inscrivez-vous!</a>
+            <a href="{{ path("fos_user_registration_register") }}" class="">Inscrivez-vous !</a>
+        </p>
+        <p>
+            Mot de passe oublié? &nbsp;
+            <a href="{{ path("fos_user_resetting_request") }}" class="">Demandez un nouveau mot de passe !</a>
         </p>
     </div> <!-- /.account-footer -->
 
